2013-11-08  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: fix ChangeLog to say 5.0.3 instead of 4.0.3.

	* unposted: NEWS: refer to zle -Fw.

	* 31940: Doc/Zsh/contrib.yo, Functions/Misc/zcalc: add -e option
	to zcalc to use input from arguments to command.

2013-11-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 31937: Doc/Zsh/zle.yo, Src/Zle/zle_main.c,
	Src/Zle/zle_thingy.c, Src/Zle/zle_utils.c, Src/math.c,
	Test/C01arith.ztst: zle -Fw uses widget semantics for
	file descriptor handler.

2013-11-06  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Completion/Debian/Command/.distfiles,
	Completion/Unix/Type/.distfiles, Config/version.mk, Etc/FAQ.yo,
	README, Src/pattern.c, Src/signals.c, Test/.distfiles: updates
	for 5.0.2-test-1 in preparation for 5.0.3.  Updated files
	in .distfiles and add mod_export declarations.

2013-11-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Stefan Neudorf: 31936: Doc/Zsh/builtins.yo,
	Src/Builtins/rlimits.awk, Src/Builtins/rlimits.c: rationalise
	thread limits

	* Stefan Neudorf: 31935: Doc/Zsh/builtins.yo,
	Src/Builtins/rlimits.awk, Src/Builtins/rlimits.c: further
	limit updates for 31930, 39134.

2013-10-31  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Stefan Neudorf: 31930 / 31934: Doc/Zsh/builtins.yo,
	Src/Builtins/rlimits.awk, Src/Builtins/rlimits.c, configure.ac,
	Src/Builtins/rlimits.c:  New BSD limits; avoid clash with
	ulimit -k.

2013-10-29  Barton E. Schaefer  <schaefer@zsh.org>

	* 31929: Src/jobs.c: fix DPUTS3() test condition from 31906.

2013-10-28  Bart Schaefer  <schaefer@zsh.org>

	* unposted: NEWS: mention HISTORY_IGNORE

2013-10-28  Peter Stephenson  <p.stephenson@samsung.com>

	* 31922: Src/Zle/zle_utils.c (zlecharasstring): missing
	flip of bit five when Meta marker inserted.

2013-10-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 31912: Src/exec.c: in closemn(), distinguish closing for >&-
	from closing for a real redirect.  Fixes knock-on multios bug